--- a/index.html
+++ b/index.html
@@ -14,11 +14,12 @@
     body {
       margin: 0;
       height: 100vh;
-      background: linear-gradient(135deg, #ff5f9e, #ffc371);
+      background:
+        radial-gradient(circle at top, rgba(255,255,255,0.15), transparent 40%),
+        linear-gradient(135deg, #2b0f1e, #7a1f3d, #c9485b);
       display: flex;
       justify-content: center;
       align-items: center;
-      text-align: center;
       color: #fff;
       overflow: hidden;
     }
@@ -27,64 +28,65 @@
     .heart {
       position: absolute;
       bottom: -20px;
-      font-size: 20px;
+      font-size: 18px;
       animation: floatUp linear infinite;
-      opacity: 0.8;
+      opacity: 0.7;
+      z-index: 1;
     }
 
     @keyframes floatUp {
-      0% {
+      from {
         transform: translateY(0) scale(1);
         opacity: 1;
       }
-      100% {
-        transform: translateY(-110vh) scale(1.5);
+      to {
+        transform: translateY(-110vh) scale(1.4);
         opacity: 0;
       }
     }
 
     .card {
-      background: rgba(255, 255, 255, 0.15);
-      padding: 30px 20px;
-      border-radius: 20px;
+      background: rgba(255, 255, 255, 0.12);
+      padding: 32px 22px;
+      border-radius: 22px;
       width: 90%;
       max-width: 380px;
-      backdrop-filter: blur(10px);
-      box-shadow: 0 10px 30px rgba(0,0,0,0.2);
+      backdrop-filter: blur(14px);
+      box-shadow: 0 20px 40px rgba(0,0,0,0.35);
       position: relative;
       z-index: 2;
     }
 
     h1 {
-      font-size: 1.8rem;
+      font-size: 1.7rem;
       margin-bottom: 10px;
     }
 
     p {
-      font-size: 1.1rem;
-      margin-bottom: 25px;
+      font-size: 1.05rem;
+      margin-bottom: 22px;
     }
 
     .buttons {
       position: relative;
-      height: 150px;
+      height: 160px;
+      margin-top: 10px;
     }
 
     button {
       border: none;
-      padding: 15px 25px;
-      font-size: 1.1rem;
+      padding: 14px 26px;
+      font-size: 1.05rem;
       border-radius: 30px;
       cursor: pointer;
-      transition: 0.2s;
+      transition: transform 0.15s ease;
+      user-select: none;
     }
 
     #yesBtn {
-      background: #00e676;
-      color: #004d2c;
-      font-weight: bold;
-      position: relative;
-      overflow: hidden;
+      background: linear-gradient(135deg, #00e676, #66ffa6);
+      color: #0b3d24;
+      font-weight: 700;
     }
 
     #yesBtn:active {
@@ -92,26 +94,27 @@
     }
 
     #noBtn {
-      background: #ff1744;
+      background: linear-gradient(135deg, #ff1744, #ff6f91);
       color: #fff;
       position: absolute;
       left: 50%;
-      top: 70px;
+      top: 85px;
       transform: translateX(-50%);
     }
 
     .love {
-      font-size: 1.3rem;
-      margin-top: 20px;
+      font-size: 1.25rem;
+      margin-top: 22px;
       display: none;
     }
 
-    /* Heart explosion */
+    /* YES burst */
     .burst {
       position: absolute;
       font-size: 18px;
       animation: burst 0.8s ease-out forwards;
       pointer-events: none;
+      z-index: 3;
     }
 
     @keyframes burst {
@@ -129,7 +132,7 @@
 
 <body>
 
-  <div class="card">
+  <div class="card" id="card">
     <h1>Hey Mahalakshmi 💕</h1>
     <p>
       Every day feels special with you…<br>
@@ -138,7 +141,7 @@
 
     <h1>Will you be my Valentine? 🌹</h1>
 
-    <div class="buttons">
+    <div class="buttons" id="buttonArea">
       <button id="yesBtn">YES 💘</button>
       <button id="noBtn">NO 🙈</button>
     </div>
@@ -153,52 +156,59 @@
     const noBtn = document.getElementById("noBtn");
     const yesBtn = document.getElementById("yesBtn");
     const loveMsg = document.getElementById("loveMsg");
+    const area = document.getElementById("buttonArea");
 
-    // Move NO button
-    function moveButton() {
-      const x = Math.random() * (window.innerWidth - noBtn.offsetWidth);
-      const y = Math.random() * (window.innerHeight - noBtn.offsetHeight);
+    // Keep NO button inside card
+    function moveNoButton() {
+      const areaRect = area.getBoundingClientRect();
+      const btnRect = noBtn.getBoundingClientRect();
+
+      const maxX = areaRect.width - btnRect.width;
+      const maxY = areaRect.height - btnRect.height;
+
+      const x = Math.random() * maxX;
+      const y = Math.random() * maxY;
+
       noBtn.style.left = `${x}px`;
       noBtn.style.top = `${y}px`;
     }
 
-    noBtn.addEventListener("mouseenter", moveButton);
-    noBtn.addEventListener("touchstart", moveButton);
+    noBtn.addEventListener("mouseenter", moveNoButton);
+    noBtn.addEventListener("touchstart", moveNoButton);
 
-    // Floating hearts generator
+    // Floating hearts
     function createHeart() {
       const heart = document.createElement("div");
       heart.className = "heart";
       heart.innerHTML = "💖";
       heart.style.left = Math.random() * 100 + "vw";
-      heart.style.animationDuration = 4 + Math.random() * 3 + "s";
+      heart.style.animationDuration = 5 + Math.random() * 4 + "s";
       document.body.appendChild(heart);
 
-      setTimeout(() => heart.remove(), 7000);
+      setTimeout(() => heart.remove(), 9000);
     }
 
-    setInterval(createHeart, 400);
+    setInterval(createHeart, 500);
 
     // YES explosion
-    yesBtn.addEventListener("click", (e) => {
+    yesBtn.addEventListener("click", () => {
       const rect = yesBtn.getBoundingClientRect();
 
-      for (let i = 0; i < 20; i++) {
+      for (let i = 0; i < 22; i++) {
         const burst = document.createElement("div");
         burst.className = "burst";
         burst.innerHTML = "💘";
         burst.style.left = rect.left + rect.width / 2 + "px";
         burst.style.top = rect.top + rect.height / 2 + "px";
-        burst.style.setProperty("--x", (Math.random() * 200 - 100) + "px");
-        burst.style.setProperty("--y", (Math.random() * -200) + "px");
+        burst.style.setProperty("--x", `${Math.random() * 200 - 100}px`);
+        burst.style.setProperty("--y", `${Math.random() * -220}px`);
         document.body.appendChild(burst);
-
         setTimeout(() => burst.remove(), 800);
       }
 
-      loveMsg.style.display = "block";
       yesBtn.style.display = "none";
       noBtn.style.display = "none";
+      loveMsg.style.display = "block";
     });
   </script>
 
